--- a/templates/block/menu.html.twig
+++ b/templates/block/menu.html.twig
@@ -2,12 +2,16 @@
     {% for i in 1..5 %}
     <div class="navigation-table__cell">
         {% for e in categories[i] %}
-        <a class="navigation__title" href="{{ path('catalog_category',{alias:e.alias}) }}">{{ e.nameLocale }}</a>
-        <ul class="navigation-list unstyled">
-            {% for e2 in e.children %}
-            <li class="navigation-list__item"><a href="{{ path('catalog_category',{alias:e2.alias}) }}" class="navigation-list__link">{{ e2.nameLocale }}</a></li>
-            {% endfor %}
-        </ul>
+            {% if e.productsCount>0 %}
+                <a class="navigation__title" href="{{ path('catalog_category',{alias:e.alias}) }}">{{ e.nameLocale }}</a>
+                <ul class="navigation-list unstyled">
+                    {% for e2 in e.children %}
+                        {% if e2.productsCount>0 %}
+                            <li class="navigation-list__item"><a href="{{ path('catalog_category',{alias:e2.alias}) }}" class="navigation-list__link">{{ e2.nameLocale }}</a></li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            {% endif %}
         {% endfor %}
     </div>
     {% endfor %}
